--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.49.8",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "resend": "^4.5.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.22",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.19",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
