--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
     "start": "node dist/server.js",
     "prisma": "prisma",
-    "build": "tsc"
+    "build": "npm run generate && tsc"
   },
   "keywords": [],
   "author": "",
