--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "pdfkit": "^0.17.1",
     "resend": "^4.5.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.7"
   },
@@ -37,6 +40,8 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.19",
     "@types/pdfkit": "^0.13.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
     "ts-node": "^10.9.2",
