--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
     "start": "node dist/server.js",
     "prisma": "prisma",
+    "seed": "ts-node src/prisma/seed.ts",
     "build": "npm run generate && tsc"
   },
   "keywords": [],
