--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "node-cron": "^4.1.0",
